--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
                 </div>
                 <div class="col-12 col-lg-4">
                     <div class="image-wrapper">
-                        <img src="assets/images/waterlevelcontrollerresized-816x908.png"
-                            alt="Smart Water Level Controller">
+                        <img src="assets/images/autowaterlevel-816x1142.jpg" alt="Smart Water Level Controller">
                     </div>
                 </div>
             </div>
@@ -232,8 +231,8 @@
     </section>
     <section
         style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;">
-        <a href="https://mobirise.site/x" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
-        <p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/y"
+        <a href="https://mobirise.site/f" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
+        <p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/g"
                 style="color:#aaa;"></a></p>
     </section>
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
