--- a/availability.html
+++ b/availability.html
@@ -97,7 +97,7 @@
                         mobile device using Our App.</p>
 
                     <div class="image-wrap mt-4">
-                        <img src="assets/images/waterlevel-1255x811.png" alt="Mobirise" title="">
+                        <img src="assets/images/waterlevel-1045x811.png" alt="Mobirise" title="">
                     </div>
                 </div>
             </div>
@@ -172,8 +172,8 @@
     </section>
     <section
         style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;">
-        <a href="https://mobirise.site/a" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
-        <p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/v"
+        <a href="https://mobirise.site/r" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
+        <p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/i"
                 style="color:#aaa;"></a></p>
     </section>
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
