--- a/components.html
+++ b/components.html
@@ -92,7 +92,7 @@
 
             </div>
             <div class="row mt-4">
-                <div class="item features-image сol-12 col-md-6 col-lg-4">
+                <div class="item features-image сol-12 col-md-6 col-lg-3">
                     <div class="item-wrapper">
                         <div class="item-img">
                             <img src="assets/images/sensors-500x333.jpg" data-slide-to="0" data-bs-slide-to="0" alt="">
@@ -108,11 +108,11 @@
 
                     </div>
                 </div>
-                <div class="item features-image сol-12 col-md-6 col-lg-4">
+                <div class="item features-image сol-12 col-md-6 col-lg-3">
                     <div class="item-wrapper">
                         <div class="item-img">
-                            <img src="assets/images/waterlevelcontrollerresized-1139x1268.png" data-slide-to="1"
-                                data-bs-slide-to="1" alt="">
+                            <img src="assets/images/autowaterlevel-891x1247.jpg" data-slide-to="1" data-bs-slide-to="1"
+                                alt="">
                         </div>
                         <div class="item-content">
                             <h5 class="item-title mbr-fonts-style display-5">Controller</h5>
@@ -125,7 +125,7 @@
 
                     </div>
                 </div>
-                <div class="item features-image сol-12 col-md-6 col-lg-4">
+                <div class="item features-image сol-12 col-md-6 col-lg-3">
                     <div class="item-wrapper">
                         <div class="item-img">
                             <img src="assets/images/homepage-401x866.png" data-slide-to="2" data-bs-slide-to="2"
@@ -165,8 +165,8 @@
     </section>
     <section
         style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;">
-        <a href="https://mobirise.site/i" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
-        <p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/s"
+        <a href="https://mobirise.site/x" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a>
+        <p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/r"
                 style="color:#aaa;"></a></p>
     </section>
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
