--- a/availability.html
+++ b/availability.html
@@ -175,8 +175,8 @@
         <a href="https://mobiri.se/" style="flex: 1 1;height: 4rem;position: absolute;width: 100%;z-index: 1;"><img
                 alt="" style="height: 4rem;"
                 src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a>
-        <p style="margin: 0;text-align: center;" class="display-7"></p><a
-            style="z-index:1" href="https://mobirise.com/html-builder.html"></a>
+        <p style="margin: 0;text-align: center;" class="display-7"></p><a style="z-index:1"
+            href="https://mobirise.com/offline-website-builder.html"></a>
     </section>
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/smoothscroll/smooth-scroll.js"></script>
