--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                 alt="" style="height: 4rem;"
                 src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a>
         <p style="margin: 0;text-align: center;" class="display-7"></p><a style="z-index:1"
-            href="https://mobirise.com/web-page-maker.html"></a>
+            href="https://mobirise.com/offline-website-builder.html"></a>
     </section>
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/smoothscroll/smooth-scroll.js"></script>
