--- a/components.html
+++ b/components.html
@@ -92,7 +92,7 @@
 
             </div>
             <div class="row mt-4">
-                <div class="item features-image сol-12 col-md-6 col-lg-3">
+                <div class="item features-image сol-12 col-md-6 col-lg-4">
                     <div class="item-wrapper">
                         <div class="item-img">
                             <img src="assets/images/sensors-500x333.jpg" data-slide-to="0" data-bs-slide-to="0" alt="">
@@ -108,7 +108,7 @@
 
                     </div>
                 </div>
-                <div class="item features-image сol-12 col-md-6 col-lg-3">
+                <div class="item features-image сol-12 col-md-6 col-lg-4">
                     <div class="item-wrapper">
                         <div class="item-img">
                             <img src="assets/images/autowaterlevel-891x1247.jpg" data-slide-to="1" data-bs-slide-to="1"
@@ -125,7 +125,7 @@
 
                     </div>
                 </div>
-                <div class="item features-image сol-12 col-md-6 col-lg-3">
+                <div class="item features-image сol-12 col-md-6 col-lg-4">
                     <div class="item-wrapper">
                         <div class="item-img">
                             <img src="assets/images/homepage-401x866.png" data-slide-to="2" data-bs-slide-to="2"
@@ -169,7 +169,7 @@
                 alt="" style="height: 4rem;"
                 src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a>
         <p style="margin: 0;text-align: center;" class="display-7"></p><a style="z-index:1"
-            href="https://mobirise.com/web-page-maker.html"></a>
+            href="https://mobirise.com/website-design-software.html"></a>
     </section>
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/smoothscroll/smooth-scroll.js"></script>
