--- a/contact-us.html
+++ b/contact-us.html
@@ -102,7 +102,7 @@
                     <!---Formbuilder Form--->
                     <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler"
                         data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true"
-                            value="gLGA+YAXYpY4A/X1kvl477aF3cKrq/GWGH+oB5f3GtTJh6SoUga3fTmhGcw9cAI08srgCKpZFRFUPGqicIfrPjCHQQH1HbrmoGpnHS/J6kbbudjhB1tbZWHiyH/Tp5eV">
+                            value="kDBIBorm8IIKe19GNhfyjt6WcNnZUCJwFd5JoGjtUA5XJJxKa4Bb76oD3+U2M64pXwceV1/d9RyQkpojuoqW/kmbS/4PEwxfPoZuUxYIlWfWRoV+ySdXzRK5p/tdxzJi">
                         <div class="row">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thank you, we
                                 will contact you at the Earliest.</div>
@@ -180,10 +180,9 @@
                             <h5 class="align-left mbr-fonts-style m-0 display-5">
                                 E-mail:
                             </h5>
-                            <p class="mbr-text align-left mbr-fonts-style display-7">
-                                <a href="mailto:mohammad.mujeeb@gmail.com"
-                                    class="text-primary">mohammad.mujeeb@gmail.com</a>
-                            </p>
+                            <p class="mbr-text align-left mbr-fonts-style display-7"><a
+                                    href="mailto:alithistechnologies@gmail.com"
+                                    class="text-primary">alithistechnologies@gmail.com</a></p>
                         </div>
                     </div>
                 </div>
@@ -219,7 +218,7 @@
                 alt="" style="height: 4rem;"
                 src="data:image/gif;base64,R0lGODlhAQABAIAAAP///wAAACH5BAEAAAAALAAAAAABAAEAAAICRAEAOw=="></a>
         <p style="margin: 0;text-align: center;" class="display-7"></p><a style="z-index:1"
-            href="https://mobirise.com"></a>
+            href="https://mobirise.com/website-maker.html"></a>
     </section>
     <script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/smoothscroll/smooth-scroll.js"></script>
